--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="css/Sp7.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo-2.webp">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
     <!-- google fonts ---fa
@@ -1644,7 +1644,7 @@
                 <a href="#about" class="none md:block rounded-full">About Neiro new doge</a>
                 <a href="#Tokenomics" class="none md:block rounded-full">Tokenomics</a>
                 <a href="#howto" class="none md:block rounded-full">How To Buy</a>
-                <a href="#team" class="none md:block rounded-full">Team</a>
+              
                 <a href="#links" class="none md:block rounded-full">Links</a>
 
                 <div></div>
