--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 
     -->
+    <meta name="description" content="The meme coin that started it all, reborn with a new inspiration who honors history but is focused on the future. 
+    Welcome neiro!  Welcome the new doge!">
     <link rel="stylesheet" href="https://unpkg.com/aos%403.0.0-beta.6/dist/aos.css" />
 
     <!-- tailwind css cdn -->
@@ -1357,7 +1359,7 @@
 
             <!-- character -->
             <img src="css/Spr1.png" alt="" class="left-[35vw] left_right_animation lg:left-[10%] z-[1] absolute h-auto w-[140px] xl:w-[400px] bottom-[80px] md:bottom-[100px]">
-            <img src="css/Sp8.png" alt="" class="right-[65%] lg:right-[0%] z-[1] absolute h-auto w-[180px] xl:w-[400px] bottom-[50px] md:bottom-[200px]">
+            <img src="css/logo-3.webp" alt="" class="right-[65%] lg:right-[0%] z-[1] absolute h-auto w-[180px] xl:w-[400px] bottom-[50px] md:bottom-[200px]">
             
 
             <!-- snow -->
@@ -1518,7 +1520,7 @@
                         </div>
                         <p class="w-[80%] font-bold text-[1.2rem] leading-[1]">TOTAL SUPPLY <br> <span class="text-[2rem] min-[1400px]:text-[1.5rem]">1.000.000.000</span> <br>
 
-                            <span class="text-[1.5rem] min-[1400px]:text-[1rem]">NEWDOGE Ticker</span></p>
+                            <span class="text-[1.5rem] min-[1400px]:text-[1rem]">NEWDOGE - Ticker</span></p>
                     </div>
 
 
@@ -1563,7 +1565,7 @@
                     <div class="how hover:rotate-0 duration-0 rotate-[-7deg] bg-[#8a92b2] relative max-[500px]:w-[90%] w-[550px] min-[1400px]:w-[680px] rounded-full h-[500px] md:h-[440px] flex justify-center items-center">
                         <div class="relative rounded-full bg-[#c0ceee] w-[95%] xl:w-[90%] h-[95%] xl:h-[90%] flex justify-center items-center flex-col text-center gap-[2rem]">
                             <div class="icon relative flex justify-center items-center">
-                                <img src="css/Sp7.png" alt="" class="h-auto object-contain w-[100px] float_animation">
+                                <img src="css/logo-3.webp" alt="" class="h-auto object-contain w-[100px] float_animation">
                             </div>
                             <h2 class="leading-[1] text-[40px] font-bold w-[80%]">BUY $NEWDOGE </h2>
                             <p class="w-[80%]">Use your newly acquired ETH base to purchase $NEWDOGE tokens through a cryptocurrency exchange or decentralized exchange platform that lists $NEWDOGE.</p>
@@ -1601,7 +1603,7 @@
 
                 <div class="left_section w-full xl:w-[500px] h-auto relative">
                     <h2 class="text-[50px] xl:text-[70px] text-[#ffb536] shadow_title aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-delay="200">OFFICIAL <br>Neiro new doge <br> LINKS</h2>
-                    <p class="font-[700] text-[1.2rem] aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-delay="300">Social &amp; Onchain Data</p>
+                    <p class="font-[700] text-[1.2rem] aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-delay="300">Socials</p>
                     <div class="social h-[80px] py-[.5rem] flex items-center gap-[1rem] w-auto relative aos-init aos-animate" data-aos="fade-right" data-aos-duration="600" data-aos-delay="400">
 
                         <a href="https://x.com/NewdogeETH?t=ODnijsD5F5tlfgSqSEEI4Q&s=09" target="_blank" class="relative cursor-pointer border-[#ffee00] hover:border-[4px] rounded-full duration-300 ">
