--- a/index.html
+++ b/index.html
@@ -1546,7 +1546,7 @@
                                 <img src="css/metamask.svg" alt="" class="h-auto object-contain w-[100px] float_animation">
                             </div>
                             <h2 class="leading-[1] text-[40px] font-bold w-[80%]">DOWNLOAD METAMASK</h2>
-                            <p class="w-[80%]">Install the <span class="text-[#000]">MetaMask browser extension</span> or mobile app to create a digital wallet for securely storing your cryptocurrencies and interacting with blockchain applications.</p>
+                            <p class="w-[80%]">Install the <span class="text-[#000]">MetaMask browser extension</span> or mobile app to create a digital wallet for securely storing your cryptocurrencies.</p>
                         </div>
 
                     </div>
@@ -1568,7 +1568,7 @@
                                 <img src="css/logo-3.webp" alt="" class="h-auto object-contain w-[100px] float_animation">
                             </div>
                             <h2 class="leading-[1] text-[40px] font-bold w-[80%]">BUY $NEWDOGE </h2>
-                            <p class="w-[80%]">Use your newly acquired ETH base to purchase $NEWDOGE tokens through a cryptocurrency exchange or decentralized exchange platform that lists $NEWDOGE.</p>
+                            <p class="w-[80%]">Use your newly acquired ETH to purchase $NEWDOGE tokens through a cryptocurrency exchange or decentralized exchange platform that lists $NEWDOGE. e.g uniswap</p>
                         </div>
 
                     </div>
