--- a/index.html
+++ b/index.html
@@ -1518,7 +1518,7 @@
                                 <img src="css/Spr1.png" alt="" class="w-[60%] xl:w-[95%] h-auto object-contain">
                             </div>
                         </div>
-                        <p class="w-[80%] font-bold text-[1.2rem] leading-[1]">TOTAL SUPPLY <br> <span class="text-[2rem] min-[1400px]:text-[1.5rem]">1.000.000.000</span> <br>
+                        <p class="w-[80%] font-bold text-[1.2rem] leading-[1]">TOTAL SUPPLY <br> <span class="text-[2rem] min-[1400px]:text-[1.5rem]">420.69B</span> <br>
 
                             <span class="text-[1.5rem] min-[1400px]:text-[1rem]">NEWDOGE - Ticker</span></p>
                     </div>
